--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/webAravis/nest-sftp.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/",
-    "tag": "latest"
+    "url": "git+https://github.com/webAravis/nest-sftp.git"
   },
   "scripts": {
     "prebuild": "rimraf dist",
